iFeature Pro Changelog

****************************

Version 4.0.6 (02-25-12)
-Additional margin fix for HTML tables.
-Updated Foundation CSS.
-Removed 20 slide limit from custom slides. 
-Adjusted doctype. 
-Removed unnecessary breadcrumb option from header options. 
-Added Banner URL option.

Version 4.0.5 (02-23-12)
-Fix for HTML tables.
-Added align:none option for featured images.
-Responsive design adjustments.
-Added missing translation wrapper to Tags: text. 
-Added a few IE related CSS fixes.
-Modified breadcrumb style, made them a page element and a templates option.
-Removed archive title and search result text from templates.
-Improved post index pagination.

Version 4.0.4 (02-17-12)
-Adjustment to Foundation JS calls to fix further plugin conflicts.
-Added Layout options.
-Minor Theme Options copy adjustments.
-Featured Image option available for Archive and Single templates.
-Added .caption_title and .caption_text classes for slider caption text.
-Fixed IE8 post thumbnail bug.
-Added iFeature Tabbed Widget.

Version 4.0.3 (02-13-12)
-Added NivoSlider option.
-Removed "width" element from slider images. 
-Fixed description color option.
-Searchform in nav now has separate style from widget. 
-Smaller home button.
-Smaller slider thumbs for iPhone size.
-jQuery no-conflict fix for better plugin compatibility. 
-Adjustment to mobile menu JS to fix conflict bug.
-Fixed color scheme bug. 
-Removed slider timer. 
-Added Custom Header Scripts option.
-Added full-width Icons header section.
-Added Custom Header Element.

Version 4.0.2 (02-09-12)
-Better handling of slider responsive breaking point widths (fixes FireFox bug).
-Fixed default afterfooter menu item spacing.
-Fixed five slide limit for sliders using blog posts.
-Fixed search widget style issue. 
-Added body text color option.
-Further revision to slider arrows.
-Fixed slider loading screen.
-Added default styling for Disqus comment system.