@@ -9,6 +9,8 @@ Version 4.0.6 (02-25-12)
 -Adjusted doctype. 
 -Removed unnecessary breadcrumb option from header options. 
 -Added Banner URL option.
+-Changed Update API function name to avoid plugin conflicts. 
+-Removed legacy icon margin option.
 
 Version 4.0.5 (02-23-12)
 -Fix for HTML tables.
